CrOS shelf: Simplify focus cycling code and add overflow button

Bug: 890894, 854313
Change-Id: I734714f3e6457852d038a00c481cc5425b8bf89c
Reviewed-on: https://chromium-review.googlesource.com/c/1420920
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Sammie Quon <sammiequon@chromium.org>
Auto-Submit: Manu Cornet <manucornet@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624462}
Former-commit-id: 65594253ffebb0fd364da090856b6f195895eab8